// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Payloads Controller (GET) /payloads when Monai doesnt respond 1`] = `[Error: A decent error message (400)]`;

exports[`Payloads Controller (GET) /payloads with returned data 1`] = `
{
  "data": [
    {
      "patient_id": "1d0253c4-8fab-41df-a414-55d52e4c6c3f",
      "patient_name": "Jane Doe",
      "payload_id": "86c0f117-4021-412e-b163-0dc621df672a",
      "payload_received": "2022-08-17T12:21:10.203Z",
    },
    {
      "patient_id": "",
      "patient_name": "",
      "payload_id": "30a8e0c6-e6c4-458f-aa4d-b224b493d3c0",
      "payload_received": "2022-08-17T12:21:10.203Z",
    },
    {
      "patient_id": "fd1bebf4-d690-4fc5-a0d8-4fd4701ff4c9",
      "patient_name": "Steve Jobs",
      "payload_id": "c5c3636b-81dd-44a9-8c4b-71adec7d47b2",
      "payload_received": "2022-08-17T12:21:10.2Z",
    },
  ],
  "firstPage": "//payload?pageNumber=1&pageSize=10",
  "lastPage": "//payload?pageNumber=1&pageSize=10",
  "nextPage": null,
  "pageNumber": 1,
  "pageSize": 10,
  "previousPage": null,
  "totalPages": 1,
  "totalRecords": 3,
}
`;

exports[`Payloads Controller (GET) /payloads with returned data 2`] = `
{
  "data": [
    {
      "patient_id": "TinyPatient02",
      "patient_name": "TinyPatient",
      "payload_id": "bb8891d4-0c02-41fe-9ec4-21516afa06e5",
      "payload_received": "2022-09-08T09:13:32.779Z",
    },
    {
      "patient_id": "TinyPatient02",
      "patient_name": "TinyPatient",
      "payload_id": "8382c110-a575-4e43-8319-e97dc8237c7b",
      "payload_received": "2022-09-08T09:10:03.334Z",
    },
  ],
  "firstPage": "//payload?pageNumber=1&pageSize=10",
  "lastPage": "//payload?pageNumber=1&pageSize=10",
  "nextPage": null,
  "pageNumber": 1,
  "pageSize": 10,
  "previousPage": null,
  "totalPages": 1,
  "totalRecords": 2,
}
`;

exports[`Payloads Controller (GET) /payloads with returned data 3`] = `
{
  "data": [
    {
      "patient_id": "556342B",
      "patient_name": "Rubo DEMO",
      "payload_id": "3b790a6a-7876-4b01-8456-0a7f6a56bf7a",
      "payload_received": "2022-09-16T09:38:02.24Z",
    },
    {
      "patient_id": "RJN7270540X",
      "patient_name": "LIONHEART^WILLIAM",
      "payload_id": "5f624ab5-88f2-4f47-b239-f05851a94c31",
      "payload_received": "2022-09-16T09:37:51.939Z",
    },
  ],
  "firstPage": "//payload?pageNumber=1&pageSize=10",
  "lastPage": "//payload?pageNumber=1&pageSize=10",
  "nextPage": null,
  "pageNumber": 1,
  "pageSize": 10,
  "previousPage": null,
  "totalPages": 1,
  "totalRecords": 4,
}
`;

exports[`Payloads Controller (GET) /payloads with returned data 4`] = `
{
  "data": [
    {
      "patient_id": "LiverUS-01",
      "patient_name": "LiverUS-01",
      "payload_id": "5f9274b6-bbb1-4263-8745-2f29297a4d9a",
      "payload_received": "2022-09-16T09:39:29.762Z",
    },
    {
      "patient_id": "556342B",
      "patient_name": "Rubo DEMO",
      "payload_id": "3b790a6a-7876-4b01-8456-0a7f6a56bf7a",
      "payload_received": "2022-09-16T09:38:02.24Z",
    },
    {
      "patient_id": "RJN7270540X",
      "patient_name": "LIONHEART^WILLIAM",
      "payload_id": "5f624ab5-88f2-4f47-b239-f05851a94c31",
      "payload_received": "2022-09-16T09:37:51.939Z",
    },
    {
      "patient_id": "TinyPatient02",
      "patient_name": "TinyPatient",
      "payload_id": "bb8891d4-0c02-41fe-9ec4-21516afa06e5",
      "payload_received": "2022-09-08T09:13:32.779Z",
    },
    {
      "patient_id": "TinyPatient02",
      "patient_name": "TinyPatient",
      "payload_id": "8382c110-a575-4e43-8319-e97dc8237c7b",
      "payload_received": "2022-09-08T09:10:03.334Z",
    },
  ],
  "firstPage": "//payload?pageNumber=1&pageSize=10",
  "lastPage": "//payload?pageNumber=1&pageSize=10",
  "nextPage": null,
  "pageNumber": 1,
  "pageSize": 10,
  "previousPage": null,
  "totalPages": 1,
  "totalRecords": 5,
}
`;

exports[`Payloads Controller (GET) /payloads without returned data 1`] = `
{
  "data": [],
  "firstPage": "//payload?pageNumber=1&pageSize=10",
  "lastPage": "//payload?pageNumber=1&pageSize=10",
  "nextPage": null,
  "pageNumber": 1,
  "pageSize": 10,
  "previousPage": null,
  "totalPages": 1,
  "totalRecords": 3,
}
`;
